# obsctl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: README.md  build.yml  buildbins.yml  release.yml
src/: auth.rs  cli.rs  config.rs  error.rs  main.rs  obs.rs  xml.rs
