[package]
name = "obsctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["alloc"] }
clap = { version = "4.5.40", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
csv = "1.3.1"
env_logger = "0.11.8"
hmac = "0.12.1"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.45.1", features = ["full"] }
