[package]
name = "obsctl"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
csv = "1.3.1"
env_logger = "0.11.8"
futures = "0.3.31"
hmac = "0.12.1"
indicatif = "0.17.11"
log = "0.4.27"
md5 = "0.7.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
strsim = "0.11.1"
tokio = { version = "1.45.1", features = ["full"] }
xmltree = "0.11.0"
