[package]
name = "obsctl"
version = "1.0.5"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
csv = "1.3.1"
dialoguer = "0.11.0"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
hmac = "0.12.1"
indicatif = "0.17.11"
log = "0.4.27"
md5 = "0.7.0"
quick-xml = { version = "0.38.0", features = ["serialize"] }
reqwest = { version = "0.12.20", features = ["json"] }
retry = "2.1.0"
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
strsim = "0.11.1"
tabled = "0.20.0"
tokio = { version = "1.45.1", features = ["full"] }

